--- a/index.html
+++ b/index.html
@@ -6,48 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style/style.css">
     <title>Document</title>
     <style>
-        *,
-        ::after,
-        ::before {
-            box-sizing: border-box;
-        }
 
-        /* body {
-            margin: 0;
-            font-family: var(--bs-font-sans-serif);
-            font-size: 2rem;
-            font-weight: 400;
-            line-height: 1.5;
-            color: #212529;
-            background-color: #fff;
-            -webkit-text-size-adjust: 100%;
-            -webkit-tap-highlight-color: transparent;
-        } */
-
-        /* .navbar-brand {
-            width: 100px;
-        } */
-
-        .container-fluid {
-            max-width: 70%;
-            min-height: 5vh;
-        }
-
-        .container {
-            max-width: 70%;
-            margin: 0px auto;
-        }
-
-        .text {
-            width: 100%;
-        }
-
-        /* .row-cols-lg-4 {
-            width: 100%;
-            display: flex;
-        } */
     </style>
 </head>
 
@@ -75,79 +37,78 @@
             </div>
         </nav>
     </header>
-    <main>
-        <section>
-            <div class="container row py-lg-5">
-                <div class="text bg-light col-lg-6 col-md-8 mx-auto py-5">
-                    <h1 class="fw-light">A Warm Welcome!</h1>
-                    <p>Two roads diverged in a yellow wood,
-                        and sorry I could not travel both
-                        and be one traveler, long I stood
-                        and looked down one as far as I could
-                        to where it bent in the undergrowth.</p>
-                    <a href="#" class="btn btn-primary my-2">Call to action!</a>
-                </div>
+    <main class="menu">
+        <div class="container row py-lg-5">
+            <div class="text bg-light col-lg-6 col-md-8 mx-auto py-5">
+                <h1 class="fw-light">A Warm Welcome!</h1>
+                <p>Two roads diverged in a yellow wood,
+                    and sorry I could not travel both
+                    and be one traveler, long I stood
+                    and looked down one as far as I could
+                    to where it bent in the undergrowth.</p>
+                <a href="#" class="btn btn-primary my-2">Call to action!</a>
             </div>
-        </section>
-        <div class="album py-2">
-            <div class="container">
-                <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-4 g-3">
-                    <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the
-                                    card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+        </div>
+        <div class="container">
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-4 g-5">
+                <div class="col">
+                    <div class="card w-55">
+                        <img src="assets/img/Foto.png" class="card-img-top" alt="foto">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the
-                                    card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+                </div>
+                <div class="col">
+                    <div class="card w-55">
+                        <img src="assets/img/Foto.png" class="card-img-top" alt="foto">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the
-                                    card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+                </div>
+                <div class="col">
+                    <div class="card w-55">
+                        <img src="assets/img/Foto.png" class="card-img-top" alt="foto">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the
-                                    card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+                </div>
+                <div class="col">
+                    <div class="card w-55">
+                        <img src="assets/img/Foto.png" class="card-img-top" alt="foto">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-
-        </div>
         </div>
     </main>
+    <footer class="text-muted py-5 bg-dark">
+        <div class="container">
+            <p class="text-center">
+                Copyright © Your Website 2023
+            </p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
